vier op een rij erbij

--- a/vieropeenrij.html
+++ b/vieropeenrij.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
+    </head>
+    
 <body>
-
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-
+    <h2>Vier op een rij</h2>
+    <table id="table1">
+        <tr>
+            <td id="tdid" onclick ="">X</td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+        </tr>
+        <tr>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+        </tr>
+        <tr>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+        </tr>
+        <tr>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+        </tr>
+        <tr>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+        </tr>
+        <tr>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+            <td id="tdid" onclick =""> </td>
+        </tr>
+    </table> 
 </body>
 </html>
